# re-tests

./: .gitignore  README.txt  pyproject.toml  setup.cfg  test.txt
re_tests_plugin/: plugin.py
tests/: test_add_data_base.py  test_check_PID.py  test_check_cancel_after_SQL_menu_in_table.py  test_check_cancel_comments.py  test_check_display_grid_ERD.py  test_check_hint.py  test_check_list_of_triggers.py  test_check_size_parameters_window.py  test_check_tab_button.py  test_check_tip.py  test_check_user_register.py  test_compare_db.py  test_create_index.py  test_create_user.py  test_er_diagramm.py  test_open_connection.py  test_search_triger.py  test_search_trigger.py  test_sql_request.py  test_transition_index.py
tests_profiler_kurs/: test_add_data_base.py  test_button_round_values.py  test_buttons_profiler.py  test_buttons_view_profiler.py  test_compare_db.py  test_data_generator.py  test_er_diagramm.py  test_execute_sql_script.py  test_export_result.py  test_grand_manager.py  test_import_data.py  test_optimaze_sql.py  test_pop_up_window_profiler.py  test_resulting_table.py  test_sql_request.py  test_tool_profiler.py  test_tree_open.py  test_user_manager.py  test_validation_table.py  tests_execute_stored_obj.py  tests_open_call_tree.py
