[metadata]
name = re-tests
version = 0.1.3
description = pytest plugin for Red Expert testing
author = Nikita Kashin
author_email = nikita.kashin@red-soft.ru

[options]
zip_safe = True
python_requires = >=3.8, <4
install_requires =
    pytest>=7.2.1
    lackey>=0.7.3

packages = find_namespace:

[options.packages.find]
include = re_tests_plugin.*

[options.entry_points]
pytest11 =
    re_tests = re_tests_plugin.plugin